Fix overlapping legend text with chart

--- a/geonode/static/v2/css/custom.css
+++ b/geonode/static/v2/css/custom.css
@@ -909,7 +909,7 @@ input[type="search"]:focus{
 }
 
 /*Chart*/
-.ch-size, .ch-size-fforecast, .ch-size-pie{
+.ch-size, .ch-size-fforecast, .ch-size-pie, .ch-size-bar-landcover{
     height: 370px;
     width: auto;
 }
