--- a/geonode/static/v2/css/print.css
+++ b/geonode/static/v2/css/print.css
@@ -180,9 +180,14 @@
 
     div.ch-size{
         height: 370px !important;
-        /*width: 250px !important;*/
-        width: 344px !important;
+        width: 270px !important;
+        /* width: 344px !important; */
     }
+
+    div.ch-size-bar-landcover{
+      height: 370px !important;
+      width: 344px !important;
+  }
 
     div.ch-size-fforecast{
         height: 370px !important;
